
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct sem {int semval; int sempid; int semncnt; int semzcnt; } ;
typedef int sem ;


 int atoi (char*) ;
 int dump_hex (struct sem*,int) ;
 int dump_sem (struct sem*) ;
 int idx ;
 int printf (char*,...) ;
 int read_sem (struct sem*) ;
 char* strchr (char*,char) ;
 scalar_t__ strstr (char*,char*) ;

void do_read(char *buf){
 int ret;
 char *p;
 struct sem sem;


 if((p = strchr(buf, ' ')) == ((void*)0)){
  printf("r must take an index argument\n");
  return;
 }

 p++;
 idx = atoi(p);

 ret = read_sem(&sem);
 if(ret < 0)
  return;

 printf("Index %d:\n", idx);

 if((p = strchr(p, '.')) == ((void*)0)){
  dump_sem(&sem);
  dump_hex(&sem, sizeof(sem));
 }
 else{
  p++;
  if(strstr(p, "val"))
   printf("val = %d (%.04x)\n",
    sem.semval, sem.semval);
  if(strstr(p, "pid"))
   printf("pid = %d (%.08x)\n",
    sem.sempid, sem.sempid);
  if(strstr(p, "ncnt"))
   printf("ncnt = %d (%.04x)\n",
    sem.semncnt, sem.semncnt);
  if(strstr(p, "zcnt"))
   printf("zcnt = %d (%.04x)\n",
    sem.semzcnt, sem.semzcnt);
 }
}
